test for e6 image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="hr"></div>
 <div id="imagebox">
   <a href="nhentai.html"><img src="hentai.png"></a>
-  <a href="e621.html"><img src="e621.png"></a>
+  <a href="e621.html"><img src="e621.PNG"></a>
   <a href="fa.html"><img src="fa.png"></a>
  </div>
  <div class="hr"></div>
