attempt at mobile support

--- a/fa.html
+++ b/fa.html
@@ -5,6 +5,7 @@
   <meta charset = "UTF-8" />
   <link rel="stylesheet" type="text/css" href="fstylesheet.css">
   <link rel="icon" href="fa.png" type="image/icon type">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <nav><a href="index.html">Return to home</a></nav>
