--- a/nhentai.html
+++ b/nhentai.html
@@ -3,8 +3,11 @@
 <head>
   <title>Hentai Roulette</title>
   <meta charset = "UTF-8" />
-  <link rel="stylesheet" type="text/css" href="hstylesheet.css">
+  <link rel="stylesheet" type="text/css" href="hstylesheet.css" />
+ 
   <link rel="icon" href="hentai.png" type="image/icon type">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 <body>
   <nav><a href="index.html">Return to home</a></nav>
