--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Porn Roulettes</title>
   <meta charset = "UTF-8" />
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <h1>Pick your Site</h1>
