added rule 34 and odd h1 margin

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <a href="nhentai.html"><img src="hentai.png"></a>
   <a href="e621.html"><img src="e621.PNG"></a>
   <a href="fa.html"><img src="fa.png"></a>
+  <a href="r34.html"><img src="r34.png"></a>
  </div>
  <div class="hr"></div>
 </body>
