forgot the title change

--- a/r34.html
+++ b/r34.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>e621 Roulette</title>
+  <title>R34 Roulette</title>
   <meta charset = "UTF-8" />
   <link rel="stylesheet" type="text/css" href="rstylesheet.css">
   <link rel="icon" href="r34.png" type="image/icon type">
