Mobile support for index page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <title>Porn Roulettes</title>
   <meta charset = "UTF-8" />
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <link rel="stylesheet" type="text/css" media='screen and (min-width: 541px)' href="stylesheet.css">
+  <link rel='stylesheet' media='screen and (min-width: 0px) and (max-width: 540px)' href='mstylesheet.css' />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
